test/Fail/DuplicateConstructors.err
DuplicateConstructors.agda:5.3-6.4: error: [DuplicateConstructors]
Duplicate constructor c in datatype
when scope checking the declaration
  data D where
    c : D
    c : D
